[gd_scene load_steps=10 format=3 uid="uid://dnionwsyq8q2h"]

[ext_resource type="Script" path="res://GameDVDCardtridge/PatchModPCK/ExperimentThePatchModPCK.gd" id="1"]
[ext_resource type="PackedScene" path="res://GameDVDCardtridge/404/uiPart/Menu404.tscn" id="2"]
[ext_resource type="FontFile" path="res://fonts/Built/Ubuntu_M_72tred.tres" id="3"]
[ext_resource type="FontFile" path="res://fonts/Built/Ubuntu_M_48tred.tres" id="4"]
[ext_resource type="PackedScene" path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/MusicEnjoy/SelectFileLoadingMode.tscn" id="5"]
[ext_resource type="FontFile" uid="uid://bmsas4i35f4x0" path="res://font/ubuntu-font-family-0.83/Ubuntu-B.ttf" id="6"]
[ext_resource type="Theme" uid="uid://4g7pi1nwsoji" path="res://Theme/Perkedel_Tema.tres" id="7"]
[ext_resource type="PackedScene" uid="uid://yf6vc0jnw4l0" path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/AreYouSureDialog.tscn" id="8"]

[sub_resource type="FontFile" id="1"]
resource_local_to_scene = true
resource_name = "Ubuntu Bold 48"
fallbacks = Array[Font]([ExtResource("6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="ExperimentThePatchModPCK" type="Node"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu404" parent="Control" instance=ExtResource("2")]
layout_mode = 0
offset_top = 0.0
offset_bottom = 100.0

[node name="ChangeDVDButton" parent="Control/Menu404" index="0"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")

[node name="ExitGameButton" parent="Control/Menu404" index="1"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")

[node name="DownTween" parent="Control/Menu404" index="2"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
script = null

[node name="TItled" type="Label" parent="Control"]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("3")
text = "Patch Mod PCK."

[node name="FileDialog" type="FileDialog" parent="Control"]
initial_position = 1
size = Vector2i(1000, 500)
visible = true
theme = ExtResource("7")
filters = PackedStringArray("*.pck; Godot Resource Pack", "*.zip; Godot Resource ZIP")
show_hidden_files = true

[node name="OpenPCKbutton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 111.0
offset_top = 208.0
offset_right = 744.0
offset_bottom = 479.0
theme_override_fonts/font = ExtResource("4")
text = "Open A PCK file"

[node name="PutLoadingBarHereButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 781.0
offset_top = 208.0
offset_right = 1414.0
offset_bottom = 479.0
theme_override_fonts/font = ExtResource("4")
text = "Put Loading Bar here"

[node name="SelectFileLoadingMode" parent="Control" instance=ExtResource("5")]

[node name="AreYouSureDialog" parent="Control" instance=ExtResource("8")]

[node name="LoadingBay" type="Node" parent="."]

[connection signal="pressed" from="Control/Menu404/ChangeDVDButton" to="." method="_on_ChangeDVDButton_pressed"]
[connection signal="pressed" from="Control/Menu404/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
[connection signal="file_selected" from="Control/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="Control/OpenPCKbutton" to="." method="_on_OpenPCKbutton_pressed"]
[connection signal="pressed" from="Control/PutLoadingBarHereButton" to="." method="_on_PutLoadingBarHereButton_pressed"]
[connection signal="YesImSure" from="Control/AreYouSureDialog" to="." method="_on_AreYouSureDialog_YesImSure"]

[editable path="Control/Menu404"]
